--- a/client/index.html
+++ b/client/index.html
@@ -5,15 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="style.css"/>
-        <title>CargoDiagramRZD</title>
+        <title>РЖД Грузы</title>
         <script src="script.js" defer></script>
     </head>
     <body>
         <main class="main">
-            <h1 class="title">CargoDiagramRZD</h1>
+            <h1 class="title"><img class="logo" src="rzhd_logo_1.png"  height="60" width="120"> Грузы</h1>
 
             <div class="cargo-info">
-                <label class="floor-length-label">
+                <label class="floor-length-label form-fields">
                     <span class="floor-length-title">
                         Длина пола:
                     </span>
@@ -25,7 +25,7 @@
                     />
                 </label>
 
-                <label class="tare-weight-label">
+                <label class="tare-weight-label form-fields">
                     <span class="tare-weight-title">
                         Масса тары:
                     </span>
@@ -37,7 +37,7 @@
                     />
                 </label>
 
-                <label class="floor-height-from-level-rail-heads-label">
+                <label class="floor-height-from-level-rail-heads-label form-fields">
                     <span class="floor-height-from-level-rail-heads-title">
                         Высота пола от УГР:
                     </span>
@@ -49,7 +49,7 @@
                     />
                 </label>
 
-                <label class="height-center-gravity-from-level-rail-heads-label">
+                <label class="height-center-gravity-from-level-rail-heads-label form-fields">
                     <span class="height-center-gravity-from-level-rail-heads-title">
                         Высота центра тяжести от УГР:
                     </span>
@@ -61,7 +61,7 @@
                     />
                 </label>
 
-                <label class="platform-base-label">
+                <label class="platform-base-label form-fields">
                     <span class="platform-base-title">
                         База платформы:
                     </span>
@@ -75,7 +75,7 @@
             </div>
 
             <div class="cargo-info">
-                <label class="cargo-length-label">
+                <label class="cargo-length-label form-fields">
                     <span class="cargo-length-title">
                         Длина груза:
                     </span>
@@ -87,7 +87,7 @@
                     />
                 </label>
                 
-                <label class="cargo-width-label">
+                <label class="cargo-width-label form-fields">
                     <span class="cargo-width-title">
                         Ширина груза:
                     </span>
@@ -99,7 +99,7 @@
                     />
                 </label>
 
-                <label class="cargo-height-label">
+                <label class="cargo-height-label form-fields">
                     <span class="cargo-height-title">
                         Высота груза:
                     </span>
@@ -111,7 +111,7 @@
                     />
                 </label>
 
-                <label class="cargo-weight-label">
+                <label class="cargo-weight-label form-fields">
                     <span class="cargo-weight-title">
                         Вес груза:
                     </span>
@@ -123,7 +123,7 @@
                     />
                 </label>
 
-                <label class="cargo-quantity-label">
+                <label class="cargo-quantity-label form-fields">
                     <span class="cargo-quantity-title">
                         Количество груза:
                     </span>
