--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <main class="main">
-            <h1 class="title"><img class="logo" src="rzhd_logo_1.png"  height="60" width="120"> Грузы</h1>
+            <h1 class="title"><img class="logo" src="rzhd_logo.png"  height="60" width="120"> Грузы</h1>
 
             <div class="cargo-info">
                 <label class="floor-length-label form-fields">
