--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
             <div class="cargo-info">
                 <label class="floor-length-label form-fields">
                     <span class="floor-length-title">
-                        Длина пола:
+                        Длина пола (мм):
                     </span>
                     <input
                         id="floor-length"
@@ -27,7 +27,7 @@
 
                 <label class="tare-weight-label form-fields">
                     <span class="tare-weight-title">
-                        Масса тары:
+                        Масса тары (т):
                     </span>
                     <input
                         id="tare-weight"
@@ -39,7 +39,7 @@
 
                 <label class="floor-height-from-level-rail-heads-label form-fields">
                     <span class="floor-height-from-level-rail-heads-title">
-                        Высота пола от УГР:
+                        Высота пола от УГР (мм):
                     </span>
                     <input
                         id="floor-height-from-level-rail-heads"
@@ -51,7 +51,7 @@
 
                 <label class="height-center-gravity-from-level-rail-heads-label form-fields">
                     <span class="height-center-gravity-from-level-rail-heads-title">
-                        Высота центра тяжести от УГР:
+                        Высота центра тяжести от УГР (мм):
                     </span>
                     <input
                         id="height-center-gravity-from-level-rail-heads"
@@ -63,7 +63,7 @@
 
                 <label class="platform-base-label form-fields">
                     <span class="platform-base-title">
-                        База платформы:
+                        База платформы (мм):
                     </span>
                     <input
                         id="platform-base"
@@ -77,7 +77,7 @@
             <div class="cargo-info">
                 <label class="cargo-length-label form-fields">
                     <span class="cargo-length-title">
-                        Длина груза:
+                        Длина груза (мм):
                     </span>
                     <input
                         id="cargo-length"
@@ -89,7 +89,7 @@
                 
                 <label class="cargo-width-label form-fields">
                     <span class="cargo-width-title">
-                        Ширина груза:
+                        Ширина груза (мм):
                     </span>
                     <input
                         id="cargo-width"
@@ -101,7 +101,7 @@
 
                 <label class="cargo-height-label form-fields">
                     <span class="cargo-height-title">
-                        Высота груза:
+                        Высота груза (мм):
                     </span>
                     <input
                         id="cargo-height"
@@ -113,7 +113,7 @@
 
                 <label class="cargo-weight-label form-fields">
                     <span class="cargo-weight-title">
-                        Вес груза:
+                        Вес груза (т):
                     </span>
                     <input
                         id="cargo-weight"
@@ -125,7 +125,7 @@
 
                 <label class="cargo-quantity-label form-fields">
                     <span class="cargo-quantity-title">
-                        Количество груза:
+                        Количество груза (шт):
                     </span>
                     <input
                         id="cargo-quantity"
