Remove dependencies and add field in form

--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,18 @@
                     />
                 </label>
 
+                <label class="floor-width-label form-fields">
+                    <span class="floor-width-title">
+                        Ширина пола (мм):
+                    </span>
+                    <input
+                        id="floor-width"
+                        value="2870"
+                        min="1"
+                        type="number"
+                    />
+                </label>
+
                 <label class="tare-weight-label form-fields">
                     <span class="tare-weight-title">
                         Масса тары (т):
