--- a/client/index.html
+++ b/client/index.html
@@ -74,6 +74,18 @@
                         type="number"
                     />
                 </label>
+
+                <label class="platform-width-label form-fields">
+                    <span class="platform-width-title">
+                        Ширина пола (мм):
+                    </span>
+                    <input
+                        id="platform-width"
+                        value="2870"
+                        min="1"
+                        type="number"
+                    />
+                </label>
             </div>
 
             <div class="cargo-info">
@@ -143,22 +155,38 @@
 
             <button id="calc-button">Посчитать</button>
 
-            <div id="result" class="hidden">
-                <h2 class="result-title">Результат</h2>
-                <ul id="result-list"></ul>
-            </div>
             <noscript>
                 В вашем браузере отключён javascript. Сайт не будет работать корректно!
             </noscript>
         </main>
 
+        <a
+                id="drawing"
+                class="hidden"
+                download="Схема.svg"
+                title="Нажмите, чтобы скачать"
+        ></a>
+
+        <section class="hidden">
+            <h4 class="title">Результат</h4>
+            <p>
+                Продольное смещение грузов в вагоне:
+                <span class="gc"></span>
+            </p>
+            <p>
+                Продольное смещение грузов с вагоном:
+                <span class="gcp"></span>
+            </p>
+            <p>
+                Общая высота ЦТ:
+                <span class="hgc"></span>
+            </p>
+        </section>
+
         <section id="report-section" class="hidden">
             <a download="Пояснительная записка.docx" id="report">
                 Скачать пояснительную записку
             </a>
-        </section>
-
-        <section id="drawing" class="hidden">
         </section>
 
     </body>
